# studious

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
.claude/: settings.json
.github/: dependabot.yml
backend/: e2e_server.py  pyproject.toml  refs.lock.json  uv.toml
backend/app/: config.py  jobs.py  main.py  middleware.py
backend/app/api/: chapters.py  costs.py  documents.py  jobs.py  preferences.py  providers.py  regions.py  store.py  study.py  transcribe.py
backend/app/providers/: registry.py
backend/app/providers/ocr/: tesseract.py
backend/app/providers/vlm/: anthropic.py
backend/app/services/: breakdown_links.py  costs.py  enrich.py  grammar_guide.py  harvest.py  jmdict.py  llm_audit.py  pdf.py  preferences.py  range_parser.py  refs_build.py  region_chain.py  srs.py  storage.py  store.py  wanikani.py
backend/scripts/: fetch_refs.py
backend/tests/: conftest.py  test_anthropic_provider.py  test_api_documents.py  test_api_jobs_sse.py  test_api_preferences.py  test_api_providers.py  test_api_store.py  test_api_study.py  test_api_transcribe.py  test_breakdown_links.py  test_chapters_regions.py  test_costs.py  test_crop_region.py  test_enrich.py  test_grammar_guide.py  test_harvest.py  test_jmdict.py  test_jobs_lifecycle.py  test_jobs_with_mock_provider.py  test_llm_audit.py  test_logging.py  test_pdf_service.py  test_provider_registry.py  test_range_parser.py  test_region_chain.py  test_srs.py  test_storage.py  test_storage_edges.py  test_storage_id_validation.py  test_store.py  test_wanikani.py
benchmarks/: compare.py  run_benchmark.py
(+80 files in other folders)
