[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "studious-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.32",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "PyMuPDF>=1.27.2.3",
    "Pillow>=10.0",
    "pytesseract>=0.3.10",
    "anthropic>=0.40",
    "python-dotenv>=1.2.2",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "pip-audit>=2.10.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
branch = false

[tool.coverage.report]
show_missing = true
skip_covered = false
